# py-xlsx-textconv

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yaml  test.yaml
py_xlsx_textconv/: __main__.py  convert.py  output.py  parse_macro.py
src/py_xlsx_textconv/: __main__.py  convert.py  run.py
tests/: test.xlsm  test.xlsx
tests/py_xlsx_textconv/: out.txt  test_convert.py  test_main.py  test_parse_macro.py  test_run.py
