[project]
name = "py-xlsx-textconv"
description = "Git textconv tool for excel"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "IIBUN Toshiyuki", email = "toshiyuki.iibun@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "openpyxl==3.0.*",
    "oletools==0.60.*",
]
dynamic = [
    "version"
]

[project.urls]
Repository = "https://github.com/tiibun/py-xlsx-textconv"

[project.scripts]
py-xlsx-textconv = "py_xlsx_textconv.__main__:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = {from = "py_xlsx_textconv/__init__.py"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "tox>=3.25.0",
    "yapf>=0.32.0",
    "tox-pdm>=0.3.1",
    "hatch>=0.23.1"]

[tool.pdm.scripts]
lint = "yapf -i -r py_xlsx_textconv"
test = "pytest"
tox = "tox"
publish = "hatch publish"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
