[metadata]
name = py-xlsx-textconv
version = 0.0.1
url = https://github.com/tiibun/py-xlsx-textconv
project_urls =
    Bug Tracker = https://github.com/tiibun/py-xlsx-textconv/issues
author = IIBUN Toshiyuki
author_email = toshiyuki.iibun@gmail.com
description = Git textconv tool for excel
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    openpyxl == 3.0.*

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest == 6.*
    build
    twine
    tox
    yapf

[options.entry_points]
console_scripts =
    py-xlsx-textconv = py_xlsx_textconv.__main__:main
